lib/cskit/parsers/science_health/science_health.treetop
# encoding: UTF-8

require 'cskit/parsers/science_health/nodes'
require 'cskit/parsers/science_health/objects'

module CSKit
  module Parsers

    grammar ScienceHealth
      rule citation
        page [\s]* ":" [\s]* line_list <CitationNode>
      end

      rule page
        [\d{1,3}|vi{2}|xi{1,2}|i{0,1}x]+ <PageNode>
      end

      rule line_list
        line ([\s]* "," [\s]* line_list)? <LineListNode>
      end

      rule line
        (compound_line_number / line_number) (only / fragment)? <LineNode>
      end

      rule compound_line_number
        line_number [\s]* "-" [\s]* line_number <CompoundLineNumberNode>
      end

      rule line_number
        [\d]+ <LineNumberNode>
      end

      rule only
        [\s]* "(" [\s]* "only" [\s]* ")" [\s]* <OnlyNode>
      end

      rule fragment
        [^,]+ <FragmentNode>
      end
    end

  end
end
